--- a/Draw/Controller/Feedback/AboutUsController.xib
+++ b/Draw/Controller/Feedback/AboutUsController.xib
@@ -56,7 +56,7 @@
 					<object class="IBUIImageView" id="87350878">
 						<reference key="NSNextResponder" ref="502016194"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrameSize">{320, 300}</string>
+						<string key="NSFrameSize">{320, 355}</string>
 						<reference key="NSSuperview" ref="502016194"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="569408159"/>
@@ -65,7 +65,7 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
 							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">paper@2x.png</string>
+							<string key="NSResourceName">paper.png</string>
 						</object>
 					</object>
 					<object class="IBUIImageView" id="569408159">
@@ -125,7 +125,7 @@
 					<object class="IBUITextView" id="86431694">
 						<reference key="NSNextResponder" ref="502016194"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{20, 64}, {280, 221}}</string>
+						<string key="NSFrame">{{20, 75}, {280, 258}}</string>
 						<reference key="NSSuperview" ref="502016194"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="401127547"/>
@@ -138,9 +138,9 @@
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<bool key="IBUIEditable">NO</bool>
-						<string type="base64-UTF8" key="IBUIText">UHJvZ3JhbSBCeQotLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0KUElQSSBQZW5nCkdhbXkg
-SHVhbmcKS2lyYSBPdQoKRGVzaWduIEJ5Ci0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0K
-Um95IEhlCg</string>
+						<string type="base64-UTF8" key="IBUIText">UHJvZ3JhbSBCeQotLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0KUElQSSBQZW5nCkdhbXkgSHVh
+bmcKS2lyYSBPdQoKCkRlc2lnbiBCeQotLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tClJveSBI
+ZQo</string>
 						<object class="NSColor" key="IBUITextColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC40MjM1Mjk0MTE4IDAuMTkyMTU2ODYyNyAwLjAzMTM3MjU0OTAyAA</bytes>
@@ -200,18 +200,18 @@ Um95IEhlCg</string>
 						<int key="IBUITextAlignment">1</int>
 						<object class="IBUIFontDescription" key="IBUIFontDescription">
 							<int key="type">1</int>
-							<double key="pointSize">23</double>
+							<double key="pointSize">20</double>
 						</object>
 						<object class="NSFont" key="IBUIFont">
 							<string key="NSName">Helvetica</string>
-							<double key="NSSize">23</double>
+							<double key="NSSize">20</double>
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
 					<object class="IBUILabel" id="237823086">
 						<reference key="NSNextResponder" ref="502016194"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{0, 308}, {320, 21}}</string>
+						<string key="NSFrame">{{0, 363}, {320, 21}}</string>
 						<reference key="NSSuperview" ref="502016194"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView"/>
@@ -318,8 +318,8 @@ Um95IEhlCg</string>
 							<reference ref="87350878"/>
 							<reference ref="643868262"/>
 							<reference ref="306816811"/>
-							<reference ref="237823086"/>
 							<reference ref="86431694"/>
+							<reference ref="237823086"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -419,7 +419,7 @@ Um95IEhlCg</string>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
 			<string key="back.png">{16, 16}</string>
-			<string key="paper@2x.png">{640, 960}</string>
+			<string key="paper.png">{16, 16}</string>
 			<string key="paperclip.png">{16, 16}</string>
 			<string key="topwood.png">{16, 16}</string>
 			<string key="wood_bg.png">{16, 16}</string>
