--- a/Draw/Controller/Feedback/AboutUsController.xib
+++ b/Draw/Controller/Feedback/AboutUsController.xib
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1296</int>
-		<string key="IBDocument.SystemVersion">11D50d</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
-		<string key="IBDocument.AppKitVersion">1138.32</string>
-		<string key="IBDocument.HIToolboxVersion">568.00</string>
+		<int key="IBDocument.SystemTarget">1280</int>
+		<string key="IBDocument.SystemVersion">10K549</string>
+		<string key="IBDocument.InterfaceBuilderVersion">1938</string>
+		<string key="IBDocument.AppKitVersion">1038.36</string>
+		<string key="IBDocument.HIToolboxVersion">461.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1179</string>
+			<string key="NS.object.0">933</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBUITextView</string>
@@ -45,7 +45,6 @@
 						<reference key="NSSuperview" ref="502016194"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="87350878"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
@@ -56,16 +55,29 @@
 					<object class="IBUIImageView" id="87350878">
 						<reference key="NSNextResponder" ref="502016194"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrameSize">{320, 355}</string>
+						<string key="NSFrameSize">{320, 414}</string>
 						<reference key="NSSuperview" ref="502016194"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="569408159"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">paper.png</string>
+						</object>
+					</object>
+					<object class="IBUIImageView" id="401127547">
+						<reference key="NSNextResponder" ref="502016194"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{62, 30}, {196, 40}}</string>
+						<reference key="NSSuperview" ref="502016194"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="237823086"/>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<object class="NSCustomResource" key="IBUIImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">paperclip.png</string>
 						</object>
 					</object>
 					<object class="IBUIImageView" id="569408159">
@@ -75,7 +87,6 @@
 						<reference key="NSSuperview" ref="502016194"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="682222563"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
@@ -90,7 +101,6 @@
 						<reference key="NSSuperview" ref="502016194"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="306816811"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -125,11 +135,10 @@
 					<object class="IBUITextView" id="86431694">
 						<reference key="NSNextResponder" ref="502016194"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{20, 75}, {280, 258}}</string>
+						<string key="NSFrame">{{20, 75}, {280, 319}}</string>
 						<reference key="NSSuperview" ref="502016194"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="401127547"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC45NDk1MzIzOTA1IDEgMSAwAA</bytes>
@@ -139,8 +148,8 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<bool key="IBUIEditable">NO</bool>
 						<string type="base64-UTF8" key="IBUIText">UHJvZ3JhbSBCeQotLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0KUElQSSBQZW5nCkdhbXkgSHVh
-bmcKS2lyYSBPdQoKCkRlc2lnbiBCeQotLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tClJveSBI
-ZQo</string>
+bmcKS2lyYSBPdQoKCgpEZXNpZ24gQnkKLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLQpSb3kg
+SGUKA</string>
 						<object class="NSColor" key="IBUITextColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC40MjM1Mjk0MTE4IDAuMTkyMTU2ODYyNyAwLjAzMTM3MjU0OTAyAA</bytes>
@@ -159,21 +168,6 @@ ZQo</string>
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUIImageView" id="401127547">
-						<reference key="NSNextResponder" ref="502016194"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{63, 45}, {194, 40}}</string>
-						<reference key="NSSuperview" ref="502016194"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="237823086"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<bool key="IBUIUserInteractionEnabled">NO</bool>
-						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<object class="NSCustomResource" key="IBUIImage">
-							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">paperclip.png</string>
-						</object>
-					</object>
 					<object class="IBUILabel" id="306816811">
 						<reference key="NSNextResponder" ref="502016194"/>
 						<int key="NSvFlags">292</int>
@@ -181,7 +175,6 @@ ZQo</string>
 						<reference key="NSSuperview" ref="502016194"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="86431694"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -211,11 +204,10 @@ ZQo</string>
 					<object class="IBUILabel" id="237823086">
 						<reference key="NSNextResponder" ref="502016194"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{0, 363}, {320, 21}}</string>
+						<string key="NSFrame">{{0, 429}, {320, 21}}</string>
 						<reference key="NSSuperview" ref="502016194"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -313,12 +305,12 @@ ZQo</string>
 						<reference key="object" ref="502016194"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="682222563"/>
-							<reference ref="401127547"/>
 							<reference ref="569408159"/>
 							<reference ref="87350878"/>
 							<reference ref="643868262"/>
 							<reference ref="306816811"/>
 							<reference ref="86431694"/>
+							<reference ref="401127547"/>
 							<reference ref="237823086"/>
 						</array>
 						<reference key="parent" ref="0"/>
@@ -413,7 +405,7 @@ ZQo</string>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.iPhoneOS</string>
-			<real value="1296" key="NS.object.0"/>
+			<real value="1280" key="NS.object.0"/>
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
@@ -424,6 +416,6 @@ ZQo</string>
 			<string key="topwood.png">{16, 16}</string>
 			<string key="wood_bg.png">{16, 16}</string>
 		</dictionary>
-		<string key="IBCocoaTouchPluginVersion">1179</string>
+		<string key="IBCocoaTouchPluginVersion">933</string>
 	</data>
 </archive>
