--- a/Draw/Controller/Feedback/AboutUsController.xib
+++ b/Draw/Controller/Feedback/AboutUsController.xib
@@ -135,7 +135,7 @@
 					<object class="IBUITextView" id="86431694">
 						<reference key="NSNextResponder" ref="502016194"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{20, 75}, {280, 319}}</string>
+						<string key="NSFrame">{{20, 88}, {280, 308}}</string>
 						<reference key="NSSuperview" ref="502016194"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="237823086"/>
@@ -192,11 +192,11 @@ SGUKA</string>
 						<float key="IBUIMinimumFontSize">10</float>
 						<int key="IBUITextAlignment">1</int>
 						<object class="IBUIFontDescription" key="IBUIFontDescription">
-							<int key="type">1</int>
+							<int key="type">2</int>
 							<double key="pointSize">20</double>
 						</object>
 						<object class="NSFont" key="IBUIFont">
-							<string key="NSName">Helvetica</string>
+							<string key="NSName">Helvetica-Bold</string>
 							<double key="NSSize">20</double>
 							<int key="NSfFlags">16</int>
 						</object>
