--- a/Draw/Controller/Share/ReplayController.xib
+++ b/Draw/Controller/Share/ReplayController.xib
@@ -78,7 +78,7 @@
 					</object>
 					<object class="IBUIButton" id="914189236">
 						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">-2147483356</int>
+						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{7, 6}, {37, 37}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSNextKeyView" ref="85193743"/>
@@ -144,7 +144,7 @@
 					</object>
 					<object class="IBUIButton" id="884275739">
 						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">-2147483356</int>
+						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{242, 5}, {69, 35}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSNextKeyView" ref="874175507"/>
@@ -201,6 +201,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{97, 428}, {127, 21}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSNextKeyView"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
